fixed hover on mobile, added text

--- a/src/scss/_desktop.scss
+++ b/src/scss/_desktop.scss
@@ -115,7 +115,7 @@
 							top: 0;
 							width: 100%;
 							opacity: 0;
-							font-size: 3vw;
+							font-size: 2.5vw;
 							a {
 								text-decoration: none;
 								color: #F0F9F9;
